more update stuff
temporarily disabled ultraspace and worldgen, other than that, it does at least run in dev mode now.